--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   width: 100vw;
   margin: 0;
   display: flex;
-  background: url(fuji.png);
+  background: url(mojave.png);
   background-size: cover;
   background-repeat: no-repeat;
   padding: 1em;
